# For_testing

./: = []  Makefile  collection.py  main.py  practice.py  profile.json  pyproject.toml  text.txt  users.json
for_tests/src/: capitalize.py
for_tests/tests/: test_capitalize.py
testing/src/: capitalize.py
testing/tests/: test_capitalize.py
