[project]
name = "study"
version = "0.1.0"
description = "All this is for test your knowledge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
    "pydantic[email]>=2.12.5",
    "pydash>=8.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["for_tests"]

[project.scripts]
